<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/category_user">

        <menu>
            <item
                android:id="@+id/nav_init"
                android:icon="@drawable/ic_home"
                android:title="@string/nav_init" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/nav_map" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />

        </menu>
    </item>

    <item android:title="@string/category_preferences">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
