<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:focusableInTouchMode="true"
    android:transitionName="profile"
    tools:context="com.android.fbarrios80.soydonante.view.profile.EditProfileActivity">

    <RelativeLayout
        android:id="@+id/editProfileRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:focusableInTouchMode="true">

        <ImageButton
            android:id="@+id/backArrowImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileCircleImageView"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_below="@+id/backArrowImageView"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:padding="8dp"
            android:src="@drawable/ic_person"
            app:civ_border_color="@color/white_google"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profileCircleImageView"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/profile_lbl_name"
            android:textColor="@color/white_google" />

        <TextView
            android:id="@+id/displayNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/nameLabel"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nameLabel"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:text="@string/profile_display_name_dummy"
            android:textColor="@color/white_google"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayNameTextView"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/profile_lbl_email"
            android:textColor="@color/white_google" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/emailLabel"
            android:layout_alignStart="@+id/emailLabel"
            android:layout_below="@+id/emailLabel"
            android:padding="4dp"
            android:text="@string/profile_email_dummy"
            android:textColor="@color/white_google"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userEmailTextView"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_lbl_gender"
            android:textColor="@color/white_google" />

        <Spinner
            android:id="@+id/genderSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/genderLabel"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/white_google" />

        <TextView
            android:id="@+id/bloodTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/genderSpinner"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/profile_lbl_blood_type"
            android:textColor="@color/white_google" />

        <Spinner
            android:id="@+id/bloodTypeSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bloodTypeLabel"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/white_google" />

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bloodTypeSpinner"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/profile_lbl_weight"
            android:textColor="@color/white_google" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weightLabel"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/weightUserEditText"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="@color/white_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kg"
                android:textColor="@color/white_google" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
